2007-07-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* add-log.el (change-log-resolve-conflict): Don't lose data if the
	merge fails.

2007-07-20  Dan Nicolaescu  <dann@ics.uci.edu>

	* progmodes/compile.el (compilation-auto-jump-to-first-error):
	Add group and version.

2007-07-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* add-log.el (add-log-file-name): Use file-relative-name.
	(add-change-log-entry): Delay reading add-log-(full-name|mailing-address)
	to after we've switched to the ChangeLog buffer so we get the right value.
	(add-change-log-entry, add-log-current-defun, change-log-merge):
	Use derived-mode-p rather than checking major-mode directly.

	* pcvs.el (cvs-mode-add-change-log-entry-other-window): Use a directory
	name for buffer-file-name if it refers to a directory.

	* vc-arch.el (vc-arch-diff): Fix last change.

	* progmodes/compile.el (compilation-start): Remember the original
	directory in a buffer-local compilation-directory.
	(compile): Set the global value of compilation-directory.
	(recompile): Use compilation-directory even in the compilation buffer.

2007-07-20  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-hg.el (vc-hg-diff): Use vc-hg-command.

2007-07-20  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* ps-print.el: Problem with foreground and background color when
	printing a buffer with and without faces.  Reported by Christian
	Schlauer <cs-muelleimer-rubbish.bin@arcor.de>.
	(ps-print-version): New version 6.7.5.
	(ps-default-fg): Change default value to nil, so black color is used
	when a face does not specify a foreground color.
	(ps-default-bg): Change default value to nil, so white color is used
	for background color.
	(ps-begin-job): Fix code.

2007-07-20  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in (install-lisp-SH): Don't create subdirectories
	in $(INSTALL_DIR)/lisp/ if they already exist.

2007-07-20  Dhruva Krishnamurthy  <dhruvakm@gmail.com>  (tiny change)
